Feat : build optimizations

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_SERVER_URL="https://6639-103-81-94-34.in.ngrok.io"
+REACT_APP_SERVER_URL="https://fast-meadow-62581.herokuapp.com"
+# REACT_APP_SERVER_URL="http://localhost:5000"
