--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_SERVER_URL="https://fast-meadow-62581.herokuapp.com"
+REACT_APP_SERVER_URL="http://13.127.141.102"
 # REACT_APP_SERVER_URL="http://localhost:5000"
